# mastermind

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
benchmarks/: benchmark.cpp
gui/: CMakeLists.txt  app_state.cpp  app_state.hpp  colors.hpp  main_gui.cpp  render.cpp  render.hpp
include/: code.hpp  config.hpp  feedback.hpp  solver.hpp  strategy.hpp
src/: code.cpp  feedback.cpp  solver.cpp  strategy.cpp  strategy_entropy.cpp  strategy_minimax.cpp  strategy_random.cpp
tests/: CMakeLists.txt  test_app_state.cpp  test_code.cpp  test_feedback.cpp  test_solver.cpp
